Refactor some suboptimal code - improve performance